# social-network

./: .gitignore  Dockerfile  README.md  Social API.postman_collection.json  TODO.md  docker-compose.yml  pyproject.toml  start.sh
code/accounts/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
code/accounts/migrations/: 0001_initial.py
code/django_project/: settings.py  urls.py
code/friends/: admin.py  models.py  permissions.py  queries.py  serializers.py  tests.py  throttles.py  urls.py  views.py
code/friends/migrations/: 0001_initial.py  0002_friendrequest_updated_at_and_more.py
